expansion of test cases. Handled several NPEs possible in safeJoin. Removed old timestamptoreadabletimestring function and replaced it with several variants that process 12 hour 24 hour, manual time or automatic time